deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: essen
  labels:
    name: essen
    app: essen-route-planning
